--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.id-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  border: 1px solid black;
+  margin-bottom: 5px;
+  padding: 5px;
+}
+
+.id-container img {
+  margin-right: 3px;
+}
+
+.credit-card {
+  width: 15%;
+  height: 150px;
+}
+
+.bank-logo {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.number-container {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.number {
+  font-size: 2rem;
 }
